chore: Update prettier written

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,15 @@
         f.parentNode.insertBefore(j, f)
       })(window, document, 'script', 'dataLayer', '%REACT_APP_GTAG%')
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K29DYB7ZT4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K29DYB7ZT4');
+    </script>
   </head>
   <body>
     <!-- GTAG (noscript) -->
