--- a/public/index.html
+++ b/public/index.html
@@ -17,17 +17,17 @@
     <title>CrossWise</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover PancakeSwap, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for CAKE."
+      content="Crosswise takes the trading experience on DEX to the next level with tighter security, a friendly interface, cross-chain transactions, gasless swaps, verified listings and the right tools"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#1FC7D4" />
-    <meta name="twitter:image" content="https://pancakeswap.finance/images/hero.png" />
+    <meta name="twitter:image" content="https://demo2.crosswise.finance/images/hero.png" />
     <meta
       name="twitter:description"
-      content="The most popular AMM on BSC! Earn CAKE through yield farming or win it in the Lottery, then stake it in Syrup Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by PancakeSwap), NFTs, and more, on a platform you can trust."
+      content="crosswise takes the trading experience on DEX to the next level with tighter security, a friendly interface, cross-chain transactions, gasless swaps, verified listings and the right tools"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="🥞 PancakeSwap - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="crosswise - Cross-Chain DEX 2.0" />
     <!-- GTAG -->
     <script>
       ;(function (w, d, s, l, i) {
